<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".General.Users.RegisterActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blues"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    app:srcCompat="@drawable/logohouse" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:text="Register"
                    android:textColor="@color/whiteblues"
                    android:textSize="34sp" />

                <EditText
                    android:id="@+id/txtPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtName"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck"
                    tools:text="Name" />

                <EditText
                    android:id="@+id/txtPersonLastName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtLastName"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck"
                    tools:text="Last Name" />

                <EditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtPhone"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                    tools:text="Phone Number" />

                <EditText
                    android:id="@+id/txtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck"
                    tools:text="E-Mail" />

                <EditText
                    android:id="@+id/txtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtCountry"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
                    tools:text="Country" />

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtAddress"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
                    tools:text="Address" />

                <EditText
                    android:id="@+id/TxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/TxtPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/TxtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:ems="10"
                    android:hint="@string/TxtRePassword"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/BtnRegisterin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/whiteblues"
                    android:text="@string/BtnRegisterInside"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>