<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".General.GeneralActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blues"
        android:orientation="vertical"
        tools:context=".fragments.HomeFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logohouse" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/cabin"
            android:lineSpacingExtra="10sp"
            android:text="LOG IN"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/txtusername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/cabin"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtpasswrod"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/cabin"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvforgot"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:text="Forgot password?"
            android:textAlignment="viewEnd"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Remember User" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/whiteblues"
            android:fontFamily="@font/cabin"
            android:text="@string/LogIn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/whiteblues"
            android:hint="@string/SignUp"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>